--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav id="nav">
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="/events.html">Events</a></li>
-                <li><a href="/gallery.html">Gallery</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="team.html">Team</a></li>
                 <li><a href="contactus.html">Contact</a></li>
             </ul>
