--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Tech Club - Home</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body style="font-family: 'Poppins', Arial, sans-serif;">
     <header>
         <div class="logo">
             <img src="images/logo.png" alt="logo">
@@ -20,7 +21,7 @@
                 <li><a href="./gallery.html">Gallery</a></li>
                 <li><a href="./team.html">Team</a></li>
                 <li><a href="./contactus.html">Contact</a></li>
-            </ul>./
+            </ul>
         </nav>
         
         <button id="dark-mode-toggle">Dark Mode</button>
