This commit fixes issue #9

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <button id="dark-mode-toggle">Dark Mode</button>
     </header>
 
-    <div class="hero-section">
+    <section class="hero-section">
         <h1>Welcome to the Tech Club</h1>
         <p>Where innovation meets community</p>
         <a href="join.html" class="btn">Join Us</a>
-    </div>
+    </section>
 
-    <div class="featured-events">
+    <section class="featured-events">
         <h2>Upcoming Events</h2>
 
         <div id="countdown">Loading...</div>
@@ -101,9 +101,9 @@
         <div class="view-all">
             <a href="events.html" class="btn">View All Events</a>
         </div>
-    </div>
+    </section>
 
-    <div class="achievements">
+    <section class="achievements">
         <h2>Our Impact</h2>
         <div class="grid-3">
             <div class="achievement-card">
@@ -119,16 +119,16 @@
                 <p>Open Source Contributions</p>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="newsletter">
+    <section class="newsletter">
         <h2>Stay Updated</h2>
         <p>Subscribe to our newsletter for the latest events and tech news.</p>
         <form>
             <input type="email" placeholder="Your Email Address">
             <button type="submit">Subscribe</button>
         </form>
-    </div>
+    </section>
 
     <footer>
         <div class="footer-col">
