This commit fixes issue #10

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 
         <div class="event-cards">
             <div class="card">
-                <div id="event1" class="event-image">
+                <div class="event-image">
                     <img src="images/event1.jpg">
                 </div>
-                <div id="event1" class="event-info">
+                <div class="event-info">
                     <h3>Hackathon 2025</h3>
                     <p class="date">April 15, 2025</p>
                     <p>Join us for a 24-hour coding marathon!</p>
