This commit fixes issue #11

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="event-cards">
             <div class="card">
                 <div class="event-image">
-                    <img src="images/event1.jpg">
+                    <img src="images/event1.jpg" alt="event1-image">
                 </div>
                 <div class="event-info">
                     <h3>Hackathon 2025</h3>
@@ -78,7 +78,7 @@
 
             <div class="card">
                 <div class="event-image">
-                    <img src="images/event2.jpg">
+                    <img src="images/event2.jpg" alt="event2-image">
                 </div>
                 <div class="event-info">
                     <h3>Workshop Series</h3>
