This commit fixes issue #12

--- a/index.html
+++ b/index.html
@@ -124,11 +124,14 @@
     <section class="newsletter">
         <h2>Stay Updated</h2>
         <p>Subscribe to our newsletter for the latest events and tech news.</p>
+
         <form>
-            <input type="email" placeholder="Your Email Address">
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="email" placeholder="Your Email Address" aria-required="true" required>
             <button type="submit">Subscribe</button>
         </form>
     </section>
+
 
     <footer>
         <div class="footer-col">
