--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         .hamburger {
@@ -155,12 +156,21 @@
         <div class="footer-col">
             <h3>Follow Us</h3>
             <div class="social-links">
-                <a href="#">FB</a>
-                <a href="#">TW</a>
-                <a href="#">IG</a>
-                <a href="#">LI</a>
+                <a href="https://www.facebook.com" aria-label="Facebook" target="_blank">
+                    <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.twitter.com" aria-label="Twitter" target="_blank">
+                    <i class="fab fa-twitter" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.instagram.com" aria-label="Instagram" target="_blank">
+                    <i class="fab fa-instagram" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.linkedin.com" aria-label="LinkedIn" target="_blank">
+                    <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                </a>
             </div>
         </div>
+        
         <div class="copyright">
             <p>© Tech Club 2025. All rights reserved.</p>
         </div>
