--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div id="countdown">Loading...</div>
 
         <div class="event-cards">
-            <div class="card">
+            <div class="event-card">
                 <div class="event-image">
                     <img src="images/event1.jpg" alt="event1-image">
                 </div>
@@ -77,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="event-card">
                 <div class="event-image">
                     <img src="images/event2.jpg" alt="event2-image">
                 </div>
@@ -89,7 +89,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="event-card">
                 <div class="event-info">
                     <h3>Tech Talk</h3>
                     <p class="date">April 30, 2025</p>
@@ -132,7 +132,6 @@
             <button type="submit">Subscribe</button>
         </form>
     </section>
-
 
     <footer>
         <div class="footer-col">
