--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo.png" alt="Tech Club Logo">
+            <!-- Added meaningful alt attribute for accessibility -->
+            <img src="images/logo.png" alt="Tech Club Logo - Fostering Innovation and Community">
         </div>
         
         <nav id="nav" aria-label="Main Navigation">
