This commit fixes issue #14 and further improves "Register Now" tag styling

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h3>Hackathon 2025</h3>
                     <p class="date">April 15, 2025</p>
                     <p>Join us for a 24-hour coding marathon!</p>
-                    <button class="register-btn">Register Now</button>
+                    <a href="register-hackathon.html" class="register-btn">Register Now</a>
                 </div>
             </div>
 
@@ -85,7 +85,7 @@
                     <h3>Workshop Series</h3>
                     <p class="date">Every Saturday</p>
                     <p>Learn new technologies with our experts</p>
-                    <button class="register-btn">Register Now</button>
+                    <a href="register-workshop.html" class="register-btn">Register Now</a>
                 </div>
             </div>
 
@@ -94,7 +94,7 @@
                     <h3>Tech Talk</h3>
                     <p class="date">April 30, 2025</p>
                     <p>AI Ethics and the Future of Work</p>
-                    <button class="register-btn">Register Now</button>
+                    <a href="register-techtalk.html" class="register-btn">Register Now</a>
                 </div>
             </div>
         </div>
