--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a href="./events.html">Events</a></li>
                 <li><a href="./gallery.html">Gallery</a></li>
                 <li><a href="./team.html">Team</a></li>
-                <li><a href="./contactus.html">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
 
