--- a/index.html
+++ b/index.html
@@ -109,42 +109,47 @@
             <label for="email" class="sr-only">Email Address</label>
             <input type="email" id="email" placeholder="Your Email Address" required>
             <button type="submit">Subscribe</button>
-        </form>
-    </div>
-
-    <footer>
-        <div class="footer-col">
-            <h3>Tech Club</h3>
-            <p>Fostering innovation and community among tech enthusiasts.</p>
-        </div>
-        <div class="footer-col">
-            <h3>Quick Links</h3>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-        <div class="footer-col">
-            <h3>Contact Us</h3>
-            <p>Email: <a href="mailto:info@techclub.edu">info@techclub.edu</a></p>
-            <p>Location: Tech Building, Room 101</p>
-        </div>
-        <div class="footer-col">
-            <h3>Follow Us</h3>
-            <div class="social-links">
-                <a href="#" aria-label="Facebook">FB</a>
-                <a href="#" aria-label="Twitter">TW</a>
-                <a href="#" aria-label="Instagram">IG</a>
-                <a href="#" aria-label="LinkedIn">LI</a>
-            </div>
-        </div>
-        <div class="copyright">
-            <p>© Tech Club 2025. All rights reserved.</p>
-        </div>
-    </footer>
-    
+            <footer>
+                <div class="footer-col">
+                    <h3>Tech Club</h3>
+                    <p>Fostering innovation and community among tech enthusiasts.</p>
+                </div>
+                <div class="footer-col">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="events.html">Events</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h3>Contact Us</h3>
+                    <p>Email: <a href="mailto:info@techclub.edu">info@techclub.edu</a></p>
+                    <p>Location: Tech Building, Room 101</p>
+                </div>
+                <div class="footer-col">
+                    <h3>Follow Us</h3>
+                    <div class="social-links">
+                        <a href="https://www.facebook.com" aria-label="Visit our Facebook page">
+                            <img src="images/facebook-icon.png" alt="Facebook Icon">
+                        </a>
+                        <a href="https://www.twitter.com" aria-label="Visit our Twitter profile">
+                            <img src="images/twitter-icon.png" alt="Twitter Icon">
+                        </a>
+                        <a href="https://www.instagram.com" aria-label="Visit our Instagram profile">
+                            <img src="images/instagram-icon.png" alt="Instagram Icon">
+                        </a>
+                        <a href="https://www.linkedin.com" aria-label="Visit our LinkedIn profile">
+                            <img src="images/linkedin-icon.png" alt="LinkedIn Icon">
+                        </a>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p>© Tech Club 2025. All rights reserved.</p>
+                </div>
+            </footer>
+            
     <script src="js/main.js"></script>
 </body>
 </html>
