Updated style and layout css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             
             <div class="card">
                 <div class="event-image">
-                    <img src="images/event2.jpg">
+                    <img src="images/event2.png">
                 </div>
                 <div class="event-info">
                     <h3>Workshop Series</h3>
