--- a/events.html
+++ b/events.html
@@ -8,16 +8,16 @@
 <body>
     <header>
         <div class="logo">Tech Club</div>
-        <div id="nav">
+        <nav id="nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="team.html">Team</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contactus.html">Contact</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
 
     <h1>Upcoming Events</h1>
@@ -33,7 +33,7 @@
         </div>
         
         <div class="event-card">
-            <img src="images/event2.jpg">
+            <img src="images/event2.png">
             <h3>Web Development Bootcamp</h3>
             <p class="date">April 12, 2025</p>
             <p class="location">Online</p>
@@ -42,6 +42,7 @@
         </div>
         
         <div class="event-card">
+            <img src="images/event2.png">
             <h3>AI Ethics Panel</h3>
             <p class="date">April 20, 2025</p>
             <p class="location">Auditorium</p>
