--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             </div>
             
             <div class="card">
+                <div class="event-image">
+                    <img src="images/event1.jpg">
+                </div>
                 <div class="event-info">
                     <h3>Tech Talk</h3>
                     <p class="date">April 30, 2025</p>
