Portfolio js and css update

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <section id="home">
-            <h1>Developer Name</h1>
+            <h1>Prashant</h1>
             <p>Web Developer | Designer | Problem Solver</p>
         </section>
 
