Dark mode update css update

--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
         <div class="logo">Tech Club</div>
         <nav id="nav">
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
