--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         
-        <button id="dark-mode-toggle">Dark Mode</button>
+        <button id="dark-mode-toggle" onclick="toggleDarkMode()">Dark Mode</button>
     </header>
 
     <div class="hero-section">
