--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/layout.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -34,7 +33,7 @@
     <div class="hero-section">
         <h1>Welcome to the Tech Club</h1>
         <p>Where innovation meets community</p>
-        <button>Join Us</button>
+        <a href="#join" class="btn">Join Us</a>
     </div>
 
     <div class="featured-events">
