--- a/about.html
+++ b/about.html
@@ -1,58 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>About Us</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - Tech Club</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <header>
+<body class="bg-gray-900 text-white">
+    <header class="flex justify-between items-center p-5 bg-gray-800">
+        <div class="logo">
+            <img src="images/logo.png" class="h-10">
+        </div>
+        
+        <nav>
+            <ul class="flex space-x-6">
+                <li><a href="index.html" class="hover:text-yellow-400">Home</a></li>
+                <li><a href="about.html" class="hover:text-yellow-400">About</a></li>
+                <li><a href="events.html" class="hover:text-yellow-400">Events</a></li>
+                <li><a href="gallery.html" class="hover:text-yellow-400">Gallery</a></li>
+                <li><a href="team.html" class="hover:text-yellow-400">Team</a></li>
+                <li><a href="contact.html" class="hover:text-yellow-400">Contact</a></li>
+            </ul>
+        </nav>
+        <button id="dark-mode-toggle" class="bg-yellow-500 text-white px-4 py-2 rounded">Dark Mode</button>
     </header>
 
-    <div class="about-section">
-        <h4>About Our Club</h4>
-        <h2>Our Story</h2>
-        <p>Founded in 2020, the Tech Club has been a hub for technology enthusiasts on campus.</p>
-        <p>We focus on open source development, coding workshops, and community building. Our members have gone on to work at top tech companies and contribute to major open source projects.</p>
+    <div class="text-center py-12 bg-gray-700">
+        <h1 class="text-4xl font-bold">About Our Club</h1>
+        <p class="mt-3">Fostering innovation and community among tech enthusiasts</p>
     </div>
 
-    <div class="mission">
-        <p>To cultivate a community of innovators who use technology to solve real-world problems</p>
+    <div class="container mx-auto py-12 px-5">
+        <h2 class="text-3xl font-bold text-yellow-400">Our Story</h2>
+        <p class="mt-4">Founded in 2020, the Tech Club has been a hub for technology enthusiasts on campus. We focus on open source development, coding workshops, and community building. Our members have gone on to work at top tech companies and contribute to major open source projects.</p>
     </div>
 
-    <div class="timeline">
-        <h2>Our Journey</h2>
-        <div>
-            <div>2020</div>
-            <div>Club founded with just 5 members</div>
-        </div>
-        <div>
-            <div>2021</div>
-            <div>First hackathon organized</div>
-        </div>
-        <div>
-            <div>2022</div>
-            <div>Expanded to 50+ active members</div>
-        </div>
-        <div>
-            <div>2023</div>
-            <div>Started open source contribution workshops</div>
+    <div class="container mx-auto py-12 px-5 bg-gray-800 rounded-lg">
+        <h2 class="text-3xl font-bold text-yellow-400">Our Journey</h2>
+        <div class="mt-6 space-y-4">
+            <div class="bg-gray-700 p-4 rounded-lg">
+                <h3 class="text-xl font-bold">2020</h3>
+                <p>Club founded with just 5 members</p>
+            </div>
+            <div class="bg-gray-700 p-4 rounded-lg">
+                <h3 class="text-xl font-bold">2021</h3>
+                <p>First hackathon organized</p>
+            </div>
+            <div class="bg-gray-700 p-4 rounded-lg">
+                <h3 class="text-xl font-bold">2022</h3>
+                <p>Expanded to 50+ active members</p>
+            </div>
+            <div class="bg-gray-700 p-4 rounded-lg">
+                <h3 class="text-xl font-bold">2023</h3>
+                <p>Started open source contribution workshops</p>
+            </div>
         </div>
     </div>
 
-    <div class="team-preview">
-        <h2>Leadership Team</h2>
-        <table>
-            <tr>
-                <td>Jane Doe</td>
-                <td>President</td>
-            </tr>
-            <tr>
-                <td>John Smith</td>
-                <td>Vice President</td>
-            </tr>
-        </table>
+    <div class="container mx-auto py-12 px-5">
+        <h2 class="text-3xl font-bold text-yellow-400">Leadership Team</h2>
+        <div class="mt-6 bg-gray-800 p-6 rounded-lg">
+            <table class="w-full text-left">
+                <tr class="border-b border-gray-600">
+                    <td class="py-2">Jane Doe</td>
+                    <td class="py-2">President</td>
+                </tr>
+                <tr>
+                    <td class="py-2">John Smith</td>
+                    <td class="py-2">Vice President</td>
+                </tr>
+            </table>
+        </div>
     </div>
 
-    <footer>
+    <footer class="bg-gray-800 text-white py-10 px-5 mt-12">
+        <div class="text-center">
+            <p>© Tech Club 2025. All rights reserved.</p>
+        </div>
     </footer>
+    
+    <script>
+        document.getElementById('dark-mode-toggle').addEventListener('click', function() {
+            document.body.classList.toggle('bg-gray-900');
+            document.body.classList.toggle('bg-white');
+            document.body.classList.toggle('text-black');
+        });
+    </script>
 </body>
 </html>
