--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,6 +21,9 @@
                 <li><a href="#contact" aria-label="Contact">Contact</a></li>
             </ul>
         </nav>
+        <button id="theme-toggle" class="theme-toggle">
+            <i class="fas fa-moon"></i> Dark Mode
+        </button>
     </header>
 
     <!-- Main Content -->
