--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -559,10 +560,6 @@
             }
         }
     </style>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -592,7 +589,7 @@
         <!-- Home Section -->
         <section id="home">
             <div class="hero-content">
-                <h1>John Developer</h1>
+                <h1>Arpit Developer</h1>
                 <p class="tagline">Web Developer | Designer | Problem Solver</p>
                 <p>I build elegant, responsive, and high-performance web applications that solve real-world problems.</p>
                 <div class="hero-buttons">
@@ -650,7 +647,7 @@
                             </div>
                             <div>
                                 <h3>Email</h3>
-                                <p>hello@johndev.com</p>
+                                <p>adoranto737@gmail.com</p>
                             </div>
                         </div>
                         <div class="contact-method">
@@ -668,7 +665,7 @@
                             </div>
                             <div>
                                 <h3>Location</h3>
-                                <p>San Francisco, CA</p>
+                                <p>India</p>
                             </div>
                         </div>
                     </div>
